// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default layout > matches snapshot (loading) 1`] = `
"<div>
  <div class="topbar-progress"><i></i></div>
  <app-header-stub></app-header-stub>
</div>"
`;

exports[`default layout > matches snapshot (not loading) 1`] = `
"<div>
  <!--v-if-->
  <app-header-stub></app-header-stub>
</div>"
`;
